--- a/frontend/src/Components/LoginFom/Login.css
+++ b/frontend/src/Components/LoginFom/Login.css
@@ -6,6 +6,7 @@
     width: 40%;
     left: 5%;
     margin: auto;
+    bottom: 20vh;
 }
 
 .header-login{
@@ -41,7 +42,7 @@
 }
 
 input{
-    width: 60%;
+    width: 55%;
     font-size: 17px;
 }
 
@@ -68,7 +69,7 @@ h2{
     justify-content: center;
     width: 30%;
     left: 25%;
-    border-radius: 15% / 50%;
+    border-radius: 10% / 50%;
     box-shadow: 0 4px 18px rgba(0, 0, 0, 0.3); 
 }
 
