--- a/frontend/src/Pages/Home/Home.css
+++ b/frontend/src/Pages/Home/Home.css
@@ -58,6 +58,12 @@
     left: 38%;
     animation: fadeInToLogin 1s ease-in forwards;
     animation-delay: 4s;
+    text-shadow: 0 0 0 rgba(255, 255, 255, 0); /* Estado inicial sin sombra */
+    transition: text-shadow 0.2s ease; /* Transición gradual para text-shadow */
+}
+
+.to-login:hover {
+    text-shadow: 0 0 10px rgba(255, 255, 255, 1); /* Efecto de sombra al hacer hover */
 }
 
 .p-Home{
