--- a/frontend/src/Components/SignupForm/Signup.css
+++ b/frontend/src/Components/SignupForm/Signup.css
@@ -6,7 +6,7 @@
     height: 70%;
     margin-left: auto;
     margin-right: auto;
-    bottom: 20vh;
+    bottom: 10vh;
     padding: 3%;
 }
 
@@ -20,6 +20,7 @@
     justify-content: center;
     flex-direction: column;
     margin: auto;
+    margin-bottom: 3%;
 }
 
 .lab-in{
